# recipe-app

./: .env.ci  .env.template  .gitignore  Dockerfile  Pipfile  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/recipe_api/: admin.py  apps.py  models.py  serializers.py  throttles.py  timestamp.py  urls.py  views.py
apps/recipe_api/migrations/: 0001_initial.py  0002_rename_ingredients_ingredient.py  0003_category_created_at_category_updated_at_and_more.py
apps/recipe_api/models/: __init__.py  category.py  ingredient.py  instruction.py  recipe.py
apps/recipe_api/templates/: locked_out.html
apps/recipes/: admin.py  apps.py  constants.py  permissions.py  serializers.py  test.py  throttles.py  urls.py  validators.py  views.py
apps/recipes/migrations/: 0001_initial.py  0002_alter_category_name_alter_ingredient_unit_and_more.py  0003_alter_ingredient_name.py  0008_alter_instruction_image.py
apps/recipes/models/: __init__.py  category.py  ingredient.py  instruction.py  recipe.py
apps/recipes/serializers/: __init__.py  category_serializer.py  ingredient_serializer.py  instruction_serializer.py  recipe_serializer.py  user_serializer.py
apps/recipes/templates/: recipe_detail.html
apps/recipes/templatetags/: filters.py
apps/recipes/tests/: test_setup.py
apps/recipes/views/: __init__.py  category_detail_view.py  category_list_view.py  ingredient_detail_view.py  ingredient_list_view.py  instruction_detail_view.py  instruction_list_view.py  locked_out_view.py  login.py  recipe.py  recipe_detail_view.py  recipe_view.py  recipe_views.py
backend/: .env.template
backend/apps/recipes/: admin.py  constants.py  permissions.py  permissions_profile.py  urls.py  validators.py
backend/apps/recipes/filters/: recipe_filter.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
config/: urls.py  validators.py
config/settings/: base.py  dev.py  prod.py
recipe/: asgi.py  settings.py  wsgi.py
(+34 files in other folders)
